--- a/css/BodegaAquiSipo.css
+++ b/css/BodegaAquiSipo.css
@@ -4,7 +4,7 @@ a{
     font-size: 50px;
 }
 #ingresoCentrado{
-    background-color: coral;
+    background: coral;
 }
 bodega{
     background-color: cyan;
