--- a/css/BodegaAquiSipo.css
+++ b/css/BodegaAquiSipo.css
@@ -11,7 +11,7 @@ img{
 }
 #ingresoBienvenida{
     
-    background: #f39e00;
+    background:  #b4fad9;
     text-align: center;
     font-size: 20px;
     margin-left: 455px;
@@ -19,7 +19,7 @@ img{
     border: 2px solid black;  
 }
 #loginUsuario{
-    background: #f39e00(224, 11, 189);
+    background: #b4fad9(224, 11, 189);
     text-align: center;
     border: 2px solid black;
     margin-left: 400px;
@@ -31,7 +31,7 @@ img{
     text-align: center;
 }
 #registroBode{
-    background: #f39e00(224, 11, 189);
+    background: #000000(224, 11, 189);
     text-align: center;
     border: 2px solid black;
     margin-left: 400px;
@@ -42,7 +42,7 @@ img{
 .navbar
 {
     height: 115px;
-    background-color: rgb(151, 62, 3);
+    background-color:#1a865d;
     color: black;
     display: flex;
     align-items: center;
@@ -57,8 +57,16 @@ img{
 }
 
 bodega{
-    background-color: rgb(245, 212, 175);
+    background-color:#fff;
 }
 body{
-    background-color:rgb(245, 198, 170);
+    background-color: #fff;
+}
+
+a{text-decoration: none; color: rgb(0, 0, 0);}
+.button-container{
+    display:grid;
+    gap: 140px;
+    grid-template-columns: 0.1fr 1fr;
+    width: 100%;
 }
