--- a/css/BodegaAquiSipo.css
+++ b/css/BodegaAquiSipo.css
@@ -37,6 +37,7 @@ img{
     margin-left: 400px;
     margin-right: 400px; 
     font-size: 20px;
+
 }
 
 .navbar
@@ -69,4 +70,15 @@ a{text-decoration: none; color: rgb(0, 0, 0);}
     gap: 140px;
     grid-template-columns: 0.1fr 1fr;
     width: 100%;
+    padding-left: 110px;
+    
 }
+input{
+    font-size: 18px;
+    height: 40px;
+    width: 400px;
+    text-align: center;
+}
+
+
+
