--- a/css/BodegaAquiSipo.css
+++ b/css/BodegaAquiSipo.css
@@ -1,5 +1,5 @@
 a{
-    color: black(255, 255, 255);
+    color: black;
     text-align: center;
     font-size: 20px;
 }
@@ -9,7 +9,7 @@ img{
     border: 2px solid black;
     
 }
-#ingresoBienvenida{
+.ingresoBienvenida{
     
     background:  #b4fad9;
     text-align: center;
