--- a/css/BodegaAquiSipo.css
+++ b/css/BodegaAquiSipo.css
@@ -1,52 +1,74 @@
-a{
+a {
     color: black;
     text-align: center;
     font-size: 20px;
 }
-img{
+
+img {
     display: block;
-    margin:auto;
-    border: 8px solid black;
-    
+    margin: auto;
+    border: 5px solid black;
 }
-.ingresoBienvenida{
-    
-    background:  #b4fad9;
+
+.linea {
+    background: #6ab89a;
+    height: 5px;
+    width: 100%;
+    display: block;
+}
+
+.galeria {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    width: 95%;
+    margin: auto;
+    grid-gap: 10px;
+    padding: 40px 0;
+    overflow: hidden;
+}
+
+.galeria img {
+    width: 100%;
+    vertical-align: top;
+    height: 300px;
+    object-fit: cover;
+}
+
+.ingresoBienvenida {
+    background: #b4fad9;
     text-align: center;
     font-size: 20px;
     margin-left: 455px;
-    margin-right: 455px;    
-    border: 2px solid black;  
+    margin-right: 455px;
+    border: 2px solid black;
 }
-.loginUsuario{
-    background-color:#b4fad9;
+
+.loginUsuario {
+    background-color: #b4fad9;
     text-align: center;
     border: 2px solid black;
     margin-left: 400px;
-    margin-right: 400px; 
+    margin-right: 400px;
     font-size: 20px;
-    
-     
 }
-#textoBienvenida{
+
+#textoBienvenida {
     text-align: center;
 }
-.registroBode{
+
+.registroBode {
     background: #000000(224, 11, 189);
     text-align: center;
     border: 2px solid black;
     margin-left: 400px;
-    margin-right: 400px; 
+    margin-right: 400px;
     font-size: 20px;
-    background-color:  #b4fad9;
-    
-
+    background-color: #b4fad9;
 }
 
-.navbar
-{
-    height: 115px;
-    background-color:#1a865d;
+.navbar {
+    height: 80px;
+    background-color: #1a865d;
     color: rgb(252, 245, 245);
     display: flex;
     align-items: center;
@@ -54,75 +76,81 @@ img{
     padding-left: 15px;
 }
 
-.container{
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-bodega{
-    background-color:#fff;
-}
-body{
-
-    background-color:lightcyan;
+bodega {
+    background-color: #fff;
 }
 
-a{text-decoration: none; color: rgb(0, 0, 0);}
-.button-container{
-    display:grid;
+body {
+    background-color: lightcyan;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
+
+.button-container {
+    display: grid;
     gap: 140px;
     grid-template-columns: 0.1fr 1fr;
     width: 100%;
     padding-left: 520px;
-    
 }
-input{
+
+input {
     font-size: 18px;
     height: 40px;
     width: 400px;
     text-align: center;
-    
 }
-.btnInicio{
+
+.btnInicio {
     float: right;
     padding-right: 40px;
 }
-.selector{
+
+.selector {
     margin-left: 20px;
     font-size: 18px;
     width: 500px;
 }
-#tblCrud{
-    background-color:#1a865d;
 
-    
+#tblCrud {
+    background-color: #1a865d;
 }
-.formulario__register{
+
+.formulario__register {
     background-color: #b4fad9;
 }
-footer{
+
+footer {
     text-align: center;
     font-size: 20px;
 }
-.separador{
-    text-align: center;
-    
-}
-.bodegaBuscar{
-    background-color:#b4fad9;
-    text-align: center;
-    font-size: 15px;
-    width: 1000px; 
-    border: 2px solid black; 
 
-}
-.listadoFiltro{
-    background-color:#b4fad9;
+.separador {
     text-align: center;
-    font-size: 15px;
-    width: 1000px; 
-    border: 2px solid black; 
 }
 
+.bodegaBuscar {
+    background-color: #b4fad9;
+    text-align: center;
+    font-size: 15px;
+    width: 1000px;
+    border: 2px solid black;
+}
+
+.listadoFiltro {
+    background-color: #b4fad9;
+    text-align: center;
+    font-size: 15px;
+    width: 1000px;
+    border: 2px solid black;
+}
