--- a/css/BodegaAquiSipo.css
+++ b/css/BodegaAquiSipo.css
@@ -8,6 +8,9 @@
         display: block;
         margin: auto;
         border: 5px solid black;
+        width: 50%;
+        
+        
     }
     
     .linea {
